# rust-actix-web-microservice

./: .env.development  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/2019-04-30-152658_create_post/: up.sql
src/: db.rs  main.rs  model.rs  models.rs  schema.rs
