[package]
name = "rust-auth"
version = "0.1.0"
authors = ["alextanhongpin <alextan220990@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-beta.2"
diesel = { version = "1.4.2", features = ["mysql"] }
dotenv = "0.13.0"
r2d2 = "0.8.4"
r2d2-diesel = "1.0.0"
r2d2_mysql = "15.0.0"

[dependencies.mysql]
version = "16.0.2"
